--- a/sponsorship.html
+++ b/sponsorship.html
@@ -51,10 +51,7 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item ">
-            <a
-              href="https://morningsidepanthers2009.dbeatdynamic.com"
-              class="nav-link"
-            >
+            <a href="index.html" class="nav-link">
               Home
             </a>
           </li>
