--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,20 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
-   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-K8RGXK3');</script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-K8RGXK3");
+    </script>
+    <!-- End Google Tag Manager -->
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -46,7 +53,7 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item ">
-            <a href="https://morningsidepanthers2009.dbeatdynamic.com" class="nav-link">
+            <a href="index.html" class="nav-link">
               Home
             </a>
           </li>
@@ -75,9 +82,11 @@
         <span class="text-secondary">Backend Web Development</span>
       </h1>
       <h2 class="sm-heading">
-        Utilising Multiple Payment Processing Portals To Create Digital Solutions</h2>
+        Utilising Multiple Payment Processing Portal To Create Solutions. Get In
+        Touch To Find Out How We Can Build Your Web Portal From The Backend!
+      </h2>
       <div class="boxes">
-      <!--  <div>
+        <div>
           <span class="text-secondary">Email:</span> br.connell18@gmail.com
         </div>
         <div><span class="text-secondary">Phone:</span> +61 412 580 206</div>
@@ -85,8 +94,8 @@
           <span class="text-secondary">Address:</span> 123 Premiership Lane,
           Morningside, QLD 4172
         </div>
-        -->
-       <form class="boxes" name="contact" method="POST" data-netlify="true">
+
+        <!-- <form class="boxes" name="contact" method="POST" data-netlify="true">
           <span class="text-secondary"
             ><label class="label1">Name: <input type="text" name="name"/></label
           ></span>
@@ -98,13 +107,13 @@
           </span>
           <span class="text-secondary">
             <label class="label4"
-              >Inquiry:
-              <select name="inquiry">
+              >Inquiry: <input type="text" name="inquiry"/>
+              <select>
                 <option value="DbeatDynamic">dbeatdynamic</option>
                 <option value="MAFCPremiershipReunion2009"
-                  >2009 MAFC Premiership Reunion</option>
+                  >2009 MAFC Premiership Reunion</option
+                >
               </select></label>
-              
           </span>
           <span class="text-secondary">
             <label class="label5">Message: <textarea name="message"></textarea></label>
@@ -113,15 +122,14 @@
             <button class="label6" type="submit">Send</button>
           </span>
         </form>
-        </div>
-        <h2 class="sm-heading">
-        Get In Touch To Find Out How We Can Build Your Web
-          Portal From The Backend!
-        </h2>
-        </main>
+         -->
+      </div>
+    </main>
     <footer id="main-footer">
       Copyright &copy; 2019
-      <a href="https://morningsidepanthers2009.dbeatdynamic.com/contact.html"> March To The Dbeat! Find Out How!</a>
+      <a href="https://morningsidepanthers2009.dbeatdynamic.com/contact.html">
+        March To The Dbeat! Find Out How!</a
+      >
     </footer>
 
     <script src="js/main.js"></script>
